--- a/offline.html
+++ b/offline.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#778899">
+    <meta name="theme-color" content="#000000">
     <title>Offline Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="./manifest.json"  />
+    <script src="./apps.js"></script>
 </head>
 <body>
-    <div class="offline-container">
-        <h1>Anda Sedang Offline</h1>
-        <p>Maaf, Anda tidak terhubung ke internet.</p>
-        <p>Silakan periksa koneksi internet Anda dan coba lagi.</p>
-        <a href="index.html">Kembali ke Halaman Utama</a>
+    <!-- NAVIGATION BAR-->
+    <div class="footer"></div>
+        <h1>Anda sedang offline </h1> <br>
     </div>
 </body>
 </html>
